examples/resolver/checker/pass/control_flow_and_calls.axo
func add(const a: Integer, const b: Integer): Integer a + b

var i = 0
var total = 0
while(i < 5, {
    total = total + add(i, 1)
    i = i + 1
})

print(total)
