examples/resolver/checker/fail/for_condition_type.axo
for(var i = 0, 10, i = i + 1, {
    print(i)
})
